--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -2,28 +2,25 @@
   visibility: false;
 }
 .event {
-  margin-bottom: 10px; 
+  margin: 10px auto;
+  width: 70%;
+  background: #fff;
 }
 
 .event-header {
-    display: flex;
-    background: white;
-    width: 70%;
-    padding: 5px;
-    margin: 0 auto;
+  display: flex;
+  padding: 5px;
 }
 
 .event-info {
-    display: block;
-    width: 70%;
-    padding: 5px;
-    margin: 0 auto;
-    background: #fff;
-    
+  display: block;
+  padding: 5px;
 }
+
 .event-img-container{
   padding-left: 0px; 
 }
+
 .event-img {
   height: 90px;
   width:90px;
@@ -48,4 +45,12 @@
 }
 .event-expand i {
   color: lightgrey
+}
+
+@media screen and (max-width: 700px) {
+  .event {
+      width: 95%;
+      margin: 10px;
+  }
+
 }
